# paper-orbit-scraper

./: .gitignore  README.md  main.py  pyproject.toml
app/: routes.py
app/handlers/: hello_handler.py  kindle_handler.py  ping_handler.py
app/models/: kindle_models.py
app/services/: crypto_service.py  hello_service.py  kindle_scraper_service.py
app/utils/: response.py  scraper.py
config/: logging_config.py
scripts/: encrypt_credentials.py  generate_private_key.py  generate_public_key.py
src/: routes.py
src/handlers/: kindle_handler.py  ping_handler.py
src/models/: kindle_models.py
src/services/: kindle_scraper_service.py
src/utils/: scraper.py
